# yaml-cli-ui

./: .pylintrc  README.md  app.ini  coverage-badge.json  examples.yaml  main.py  pyproject.toml  sample.yaml
docs/: context.md  spec_v2_lite_draft1.md  v1_to_v2_migration.md  v1_v2_routing.md  v2_app_ui.md  v2_argv.md  v2_command_executor.md  v2_context_locals.md  v2_examples.md  v2_expr_renderer.md  v2_golden_tests.md  v2_loader_validator.md  v2_migration_plan.md  v2_persistence.md  v2_pipeline_executor.md  v2_spec.md  yaml_pipeline_reference.md
examples/: app.ini  on_error_demo.py  on_error_demo.yaml  sample.yaml  script.yaml  v1_minimal.yaml  v1_yt_audio.yaml  v2_ingest_demo.yaml  v2_minimal.yaml  yt_audio.yaml
tests/: __init__.py  test_app.py  test_app_v2.py  test_bootstrap_version_routing.py  test_docs_examples_smoke.py  test_engine.py  test_presets.py  test_ui_form_widgets.py  test_ui_log_views.py  test_ui_tooltips.py  test_v2_argv.py  test_v2_context.py  test_v2_executor.py  test_v2_expr.py  test_v2_fixtures_argv.py  test_v2_fixtures_command_executor.py  test_v2_fixtures_context.py  test_v2_fixtures_expr_renderer.py  test_v2_fixtures_integration.py  test_v2_fixtures_loader.py  test_v2_fixtures_pipeline_executor.py  test_v2_fixtures_validator.py  test_v2_imports.py  test_v2_loader.py  test_v2_models.py  test_v2_persistence.py  test_v2_pipeline_executor.py  test_v2_renderer.py  test_v2_validator.py  timer copy.py  timer.py  v2_context.py  v2_test_utils.py
yaml_cli_ui/: __init__.py  app.py  app_v2.py  bootstrap.py  engine.py  expression.py  presets.py  schema.py  (+2 more)
(+52 files in other folders)
